Improving build script. Updating versions. Bugfixes. Full modernization to jakarta. Javadoc improvements and fixes. Making it friendlier to IDEs.